html basic structure and almost no scc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SkyHouse</title>
-    <link rel="stylesheet" href="css/helvetica-neue-lt-geo.css" />
+    <link rel="stylesheet" href="scr/css/helvetica-neue-lt-geo.css" />
     <link rel="stylesheet" href="scr/css/styles.css" />
   </head>
   <body>
@@ -13,7 +13,6 @@
         <a href="#" class="nav__logo">
           <img src="scr/media/logo.svg" alt="" />
         </a>
-
         <nav>
           <ul class="nav__list--items">
             <li class="nav__list--item"><a href="#">მთავარი</a></li>
@@ -26,6 +25,60 @@
         </nav>
       </div>
     </header>
-    <body></body>
+
+    <div class="about_us">
+      <h2>ჩვენს შესახებ</h2>
+      <img src="scr/media/Rectangle 7@2x.png" alt="" class="about_us_img" />
+      <p>
+        ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის
+        ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის
+        გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს,
+        ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი
+        ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი
+        პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს,
+        როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი
+        საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე
+        ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+        გამო, ზოგი კი — განზრახ, ხუმრობით.
+      </p>
+      <p>
+        Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი
+        სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ
+        დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+      </p>
+    </div>
+
+    <div class="services">
+      <h2>სერვისები</h2>
+      <img src="scr/media/Rectangle 20@2x.png" alt="" class="services_img" />
+      <p>
+        ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის
+        ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის
+        გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს,
+        ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი
+        ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი
+        პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს,
+        როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი
+        საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე
+        ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+        გამო, ზოგი კი — განზრახ, ხუმრობით.
+      </p>
+    </div>
+
+    <div class="projects">
+      <h2>პროექტები</h2>
+      <img src="scr/media/Rectangle 18.png" alt="" />
+      <img src="scr/media/Rectangle 19.png" alt="" />
+      <img src="scr/media/Rectangle 20.png" alt="" />
+      <img src="scr/media/Rectangle 21.png" alt="" />
+    </div>
+    <div>
+      <h2>პარტნიორები</h2>
+      <p>
+        Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი
+        სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ
+        დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+      </p>
+    </div>
   </body>
 </html>
