--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
     </div>
 
     <div class="projects">
-      <h2>პროექტები</h2>
-      <img src="scr/media/Rectangle 18.png" alt="" />
-      <img src="scr/media/Rectangle 19.png" alt="" />
-      <img src="scr/media/Rectangle 20.png" alt="" />
-      <img src="scr/media/Rectangle 21.png" alt="" />
+      <div class="projects__banner">
+        <h2>პროექტები</h2>
+        <img src="scr/media/Rectangle 18.png" alt="" />
+        <img src="scr/media/Rectangle 19.png" alt="" />
+        <img src="scr/media/Rectangle 20.png" alt="" />
+        <img src="scr/media/Rectangle 21.png" alt="" />
+      </div>
     </div>
     <div>
       <h2>პარტნიორები</h2>
